--- a/calculator/src/App.css
+++ b/calculator/src/App.css
@@ -20,3 +20,70 @@
 .App-link {
   color: #09d3ac;
 }
+
+body {
+  font: 14px "Century Gothic", Futura, sans-serif;
+  margin: 20px;
+}
+
+ol, ul {
+  padding-left: 30px;
+}
+
+/* .row:after {
+  clear: both;
+  content: "";
+  display: table;
+} */
+
+.status {
+  margin-bottom: 10px;
+}
+
+/* .square {
+  background: #fff;
+  border: 1px solid #999;
+  float: left;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 34px;
+  height: 34px;
+  margin-right: -1px;
+  margin-top: -1px;
+  padding: 0;
+  text-align: center;
+  width: 34px;
+}
+
+.square:focus {
+  outline: none;
+}
+
+.screen {
+  background: #fff;
+  border: 1px solid #999;
+  /* float: left; */
+  /* font-size: 24px;
+  font-weight: bold;
+  line-height: 34px;
+  height: 34px;
+  margin-right: -1px;
+  margin-top: -1px;
+  padding: 0;
+  text-align: right;
+  width: 130px;
+} */ */
+
+.kbd-navigation .square:focus {
+  background: #ddd;
+}
+
+/* .calculator {
+  display: flex;
+  flex-direction: row;
+}
+
+.calculator-info {
+  margin-left: 20px;
+} */
+
