--- a/calculator/src/Components/Components.css
+++ b/calculator/src/Components/Components.css
@@ -1,11 +1,3 @@
-/* body {
-    font: 14px "Century Gothic", Futura, sans-serif;
-    margin: 20px;
-  }
-  
-  ol, ul {
-    padding-left: 30px;
-  } */
   
   .row:after {
     clear: both;
@@ -13,23 +5,26 @@
     display: table;
   }
   
-  /* .status {
-    margin-bottom: 10px;
-  } */
-  
   .square {
-    background: #fff;
     border: 1px solid #999;
     float: left;
     font-size: 24px;
     font-weight: bold;
     line-height: 34px;
     height: 34px;
-    margin-right: -1px;
-    margin-top: -1px;
-    padding: 0;
+    margin-right: 1px;
+    margin-top: 1px;
     text-align: center;
+    font: 20px "Century Gothic", Futura, sans-serif, bold;
     width: 34px;
+    border-radius: 3px;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+  }
+
+  .square:hover {
+      background-color: #F0F0F8;
+      color: black;
   }
   
   .square:focus {
@@ -39,29 +34,15 @@
   .screen {
     background: #fff;
     border: 1px solid #999;
-    /* float: left; */
     font-size: 24px;
     font-weight: bold;
     line-height: 34px;
     height: 34px;
     margin-right: -1px;
     margin-top: -1px;
-    padding: 0;
+    border-radius: 3px;
+    padding: 2px;
     text-align: right;
-    width: 130px;
+    width: 133px;
   }
-  
-  /* .kbd-navigation .square:focus {
-    background: #ddd;
-  } */
-  
-  .calculator {
-    display: flex;
-    flex-direction: row;
-  }
-  
-  .calculator-info {
-    margin-left: 20px;
-  }
-  
   
