--- a/calculator/src/Components/Components.css
+++ b/calculator/src/Components/Components.css
@@ -23,6 +23,28 @@
   }
 
   .square:hover {
+    background-color: #F0F0F8;
+    color: black;
+  }
+
+  .rectangle {
+    border: 1px solid #999;
+    float: left;
+    font-size: 24px;
+    font-weight: bold;
+    line-height: 34px;
+    height: 34px;
+    margin-right: 1px;
+    margin-top: 1px;
+    text-align: center;
+    font: 20px "Century Gothic", Futura, sans-serif, bold;
+    width: 68px;
+    border-radius: 3px;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+  }
+
+  .rectangle:hover {
       background-color: #F0F0F8;
       color: black;
   }
@@ -43,6 +65,6 @@
     border-radius: 3px;
     padding: 2px;
     text-align: right;
-    width: 133px;
+    width: 167px;
   }
   
